# ARCONS-pipeline

./: .gitignore  README.md  README.txt  new.fits
QEcal/: QECalibration.py  QEfile.py  waveCal_QE_Popup.py
astrometry/: CalculateRaDec.py  CalculateRaDecOld.py  CentroidCalc.py  Lick2012Initialization.ini  RaDecMap.py  calculateCR.py  calculateRaDec.py  centroidCalc.py  displayCentroidResult.py  pltscale_calc.py
beammap/: BeamMap.py  BeamMap2.py  BeamMap2Multiple.py  makeNewBeammap.py  pixels_movingscan.py  remapPixels.py
control/: DisplayStack.py  DisplayStack_gui.py  DisplayStack_gui.ui  LoadImageStack.py  LoadImageStack_gui.py  LoadImageStack_gui.ui  readme.txt
cosmic/: .gitignore  Cosmic.py  CosmicRun.py  CosmicRunFromDictFile.py  NPBinner.py  README.txt  TimeMask.py  arconsCosmic.py  setup.py  tsBinner.pyx
cosmic/c_binner/: .gitignore  CMakeLists.txt  README.TXT  __init__.py  c_binner.i
examples/: #git-cheat-sheet.txt#  README.txt  README.txt~  decodeProblem.py  descriptions.py  git-cheat-sheet.txt  git-cheat-sheet.txt~  making-qt-work.txt  making-qt-work.txt~  sexigesimalDemo.py
flatcal/: flatCal.py  illuminationCal.py  plotWeights.py
fluxcal/: fluxCal.py
headers/: ArconsHeaders.py  CalHeaders.py  DisplayStackHeaders.py  ObsHeaders.py  TimeMask.py  constants.py  pipelineFlags.py
hotpix/: compareFlats.py  flashMask.py  flashPopup.py  hotPixelMasker.py  hotPixels.py  manuallyRemovePixels.py  quantifyBadTime.py  quantifyHotTime.py  readme.txt  removePixelsGui.py
legacy/: ARCONS_Cubes.py  ARCONSclasses.py
mosaicing/: matchFinder.py
params/: flatCal.dict  flatExplorersdss.dict  fluxCal.dict  hotPixels.dict  pixelExplorer.dict  waveCal.dict
photometry/: AperPhotometry.py  LightCurve.py  LightCurve_Popup.py  PSF_Popup.py  PSFphotometry.py  Photometry.py  aper_Popup.py  plot3DImage.py
photonlist/: RADecImage-CrabPhaseInfo.py  RADecImage.py  boxer.f  (+4 more)
(+963 files in other folders)
